# TuyaOpen-T3

./: .gitignore  Kconfig  README.md  build_example.sh  build_setup.sh  default.config  platform_config.cmake  platform_prepare.sh  requirements.txt  toolchain_file.cmake
.github/workflows/: sync-to-gitee.yml
examples/get-started/cxx/: app_default.config
examples/graphics/lvgl_demo/: app_default.config
examples/graphics/lvgl_demo/src/: example_lvgl.c
examples/protocols/https_client/: README.md  README_CN.md  app_default.config
examples/protocols/https_client/src/: example_https_client.c
examples/protocols/https_client/tuyadb/: tuyadb
t3_os/: build.sh  format_up_bin.py  get_map_section.py  sync.sh  toolchain_get.sh
t3_os/armino/: sdk_version.txt  sync.sh
t3_os/armino/components/: sdk_version.txt
t3_os/armino/components/ali_mqtt/: Kconfig
t3_os/armino/components/at_server/: at_task.c
t3_os/armino/components/bk_ate/: ate.c
t3_os/armino/components/bk_bluetooth/: Kconfig
t3_os/armino/components/bk_cli/: CMakeLists.txt  Kconfig  cli.h  cli_config.h  cli_dwt.c  cli_fft.c  cli_fpb.c  (+11 more)
t3_os/extra_components/: CMakeLists.txt
t3_os/tuya_app/: CMakeLists.txt
t3_os/tuya_app/main/: CMakeLists.txt  app_main.c  default_gpio_config.h
t3_os/tuya_app/properties_libs/: bk7236.config  bk7258.config
tuyaos/tuyaos_adapter/: CMakeLists.txt  Kconfig
tuyaos/tuyaos_adapter/include/: dl_list.h  tuya_driver.h  tuya_gpio_map.h  tuya_os_adapt_output.h  tuya_pwm.h
tuyaos/tuyaos_adapter/include/adc/: tkl_adc.h
tuyaos/tuyaos_adapter/include/bluetooth/: tkl_bluetooth.h  tkl_bluetooth_bredr.h  tkl_bluetooth_def.h  tkl_bluetooth_mesh_def.h  tkl_bluetooth_mesh_device.h  tkl_bluetooth_mesh_prov.h  tkl_bluetooth_sm.h
tuyaos/tuyaos_adapter/include/display/: tkl_disp_drv_lcd.h  tkl_display.h
tuyaos/tuyaos_adapter/include/flash/: tkl_flash.h
tuyaos/tuyaos_adapter/include/gpio/: tkl_gpio.h
tuyaos/tuyaos_adapter/include/hci/: tkl_hci.h
tuyaos/tuyaos_adapter/include/hostapd/: tuya_hostapd_driver.h  tuya_hostapd_ioctl.h
tuyaos/tuyaos_adapter/include/i2c/: tkl_i2c.h
tuyaos/tuyaos_adapter/include/init/include/: tkl_init.h  tkl_init_cellular.h  tkl_init_common.h  tkl_init_nbiot.h  tkl_init_network.h  tkl_init_pm.h  tkl_init_system.h  tkl_init_wifi.h  tkl_init_wired.h
tuyaos/tuyaos_adapter/include/init/src/: tkl_init_common.c  tkl_init_network.c  tkl_init_system.c  tkl_init_wifi.c  tkl_init_wired.c
tuyaos/tuyaos_adapter/include/ipc/: tkl_ipc.h
tuyaos/tuyaos_adapter/include/lvgl/: tkl_lvgl.h
tuyaos/tuyaos_adapter/include/lwip/: net.h
tuyaos/tuyaos_adapter/include/media/: tkl_audio.h  tkl_isp.h  tkl_media.h  tkl_video_enc.h  tkl_video_in.h
tuyaos/tuyaos_adapter/include/network/: tkl_lwip.h  tkl_network.h
tuyaos/tuyaos_adapter/include/pinmux/: tkl_pinmux.h
tuyaos/tuyaos_adapter/include/pm/: tkl_pm.h
tuyaos/tuyaos_adapter/include/pwm/: tkl_pwm.h
tuyaos/tuyaos_adapter/include/rtc/: tkl_rtc.h
tuyaos/tuyaos_adapter/include/security/: tkl_asymmetrical.h  tkl_hash.h  tkl_symmetry.h
tuyaos/tuyaos_adapter/include/spi/: tkl_spi.h
tuyaos/tuyaos_adapter/include/system/: tkl_fs.h  tkl_memory.h  tkl_mutex.h  tkl_ota.h  tkl_output.h  tkl_queue.h  tkl_semaphore.h  tkl_sleep.h  tkl_system.h  tkl_thread.h
tuyaos/tuyaos_adapter/include/timer/: tkl_timer.h
tuyaos/tuyaos_adapter/include/uart/: tkl_uart.h
tuyaos/tuyaos_adapter/include/utilities/include/: tuya_cloud_types.h  tuya_hashmap.h  tuya_hlist.h  tuya_list.h  tuya_queue.h  tuya_ringbuf.h  tuya_slist.h  tuya_smartpointer.h  tuya_tools.h
tuyaos/tuyaos_adapter/include/utilities/src/: tuya_hashmap.c  tuya_list.c  tuya_mem_heap.c  tuya_queue.c  tuya_ringbuf.c  tuya_smartpointer.c  tuya_tools.c
tuyaos/tuyaos_adapter/include/wakeup/: tkl_wakeup.h
tuyaos/tuyaos_adapter/include/watchdog/: tkl_watchdog.h
tuyaos/tuyaos_adapter/include/wifi/: tkl_wifi.h  tkl_wifi_hostap.h
tuyaos/tuyaos_adapter/include/wired/: spi_eth_drv.h  spi_eth_drv_ch390.h  tkl_wired.h
tuyaos/tuyaos_adapter/src/: DsoHack.cc  bk_adapter.c  cli_tuya_test.c
tuyaos/tuyaos_adapter/src/driver/: encrypt.c  net.c  spi_eth_drv.c  spi_eth_drv_ch390.c  tkl_adc.c  tkl_flash.c  tkl_gpio.c  tkl_hci.c  tkl_i2c.c  tkl_lwip.c  tkl_mic.c  tkl_pinmux.c  tkl_pwm.c  tkl_rtc.c  tkl_spi.c  tkl_timer.c  tkl_uart.c  tkl_wakeup.c  tkl_watchdog.c  tkl_wifi.c  tkl_wired.c
tuyaos/tuyaos_adapter/src/driver/tkl_display/: tkl_disp_driver.h  tkl_disp_drv_lcd.c  tkl_display.c  tkl_display_convert.c  tkl_display_framebuffer.c  tkl_display_private.h
tuyaos/tuyaos_adapter/src/system/: tkl_memory.c  tkl_mutex.c  tkl_network.c  tkl_ota.c  tkl_output.c  tkl_queue.c  tkl_semaphore.c  tkl_sleep.c  tkl_system.c  tkl_thread.c
(+362 files in other folders)
